kubernetes-dashboard/components/kubernetes-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    argocd.argoproj.io/sync-wave: '1'
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes-dashboard.<DOMAIN_NAME>
      http:
        paths:
          - backend:
              service:
                name: <CLUSTER_NAME>-kubernetes-dashboard
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kubernetes-dashboard.<DOMAIN_NAME>
      secretName: kubernetes-dashboard-tls
